--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Standalone build of Babel for use in non-Node.js environments. Similar to the (now deprecacted) babel-browser",
   "main": "babel.js",
   "scripts": {
+    "minify": "gulp minify && ./fuckit && gjs babel.min.js",
     "test": "mocha"
   },
   "repository": {
