--- a/package.json
+++ b/package.json
@@ -106,8 +106,7 @@
     "mocha": "^2.4.5",
     "react": "^0.14.7",
     "webpack": "^1.12.14",
-    "webpack-stream": "^3.1.0",
-    "babel-preset-mozjs24": "*"
+    "webpack-stream": "^3.1.0"
   },
   "keywords": [
     "babel",
